# instagram-bot

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  index.js  package.json  pnpm-lock.yaml
browser-extension/: content.js  manifest.json
dm-app/: Launch.command  index.html  package-lock.json  package.json  vite.config.ts
dm-app/server/: index.cjs
dm-app/src/: App.tsx  api.ts
dm-app/src-tauri/: Cargo.toml  tauri.conf.json
dm-app/src-tauri/capabilities/: default.json
dm-app/src-tauri/src/: main.rs
dm-app/src/assets/: main.css
dm-app/src/components/: ActivityBar.tsx  CommentsClaudePanel.tsx  CommentsThread.tsx  Dialog.tsx  EmojiButton.tsx  Icons.tsx  Inbox.tsx  ReelsPanel.tsx  ResizeHandle.tsx  StylePanel.tsx  SuggestionsPanel.tsx  TabBar.tsx  TemplatesPanel.tsx  Titlebar.tsx  UnrepliedPanel.tsx
plans/: 2026-05-04-desktop-app.md  2026-05-05-desktop-app-tauri-migration.md  2026-05-13-browser-extension.md
plans/sessions/: 2026-05-05-desktop-app-start.md  2026-05-05-desktop-app-ui-complete.md  2026-05-06-phase2-claude-live.md  2026-05-06-phase2-instagram-api.md  2026-05-07-app-working.md  2026-05-07-optimistic-inbox-refresh.md
